--- a/index.html
+++ b/index.html
@@ -4,17 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylos.css">
+    <link rel="stylesheet" href="./index.js">
     <title>PRESTAMOS ML</title>
 </head>
 <body>
-    <div class="card" style="width: 18rem;">
-        <img src="./imagenes/pressssstamo.webp" class="card-img-top" alt="dolares">
-        <div class="card-body">
-          <h5 class="card-title">Recibi mas informacion</h5>
-          <p class="card-text">Acercate a nuestra sucursal mas cercana o escribinos por wp para asesorarte</p>
-          <a href="#" class="btn btn-primary">Go</a>
-        </div>
-      </div>
+  <header></header>
+  <main>
+    </div>
+    <section class="card_contenedora">
+    <div>
+    <div id="cards1" class="card1">
+    <img class="card-img-top1">
+    <h2 class="card-title1"></h2>
+    <p class="card-text1"></p>
+    </div>
+    <div id="cards2" class="card2">
+    <img class="card-img-top2">
+    <h2 class="card-title2"></h2>
+    <p class="card-text2"></p>
+    </div>
+    </div>
+    <div>
+    <div id="cards3" class="card3">
+    <img class="card-img-top3">
+    <h2 class="card-title3"></h2>
+    <p class="card-text3"></p>
+    </div>
+    <div id="cards4" class="card4">
+    <img class="card-img-top4">
+    <h2 class="card-title4"></h2>
+    <p class="card-text4"></p>
+    </div>
+    </div>
+    <div class="container">
+     <h1>carrito de compras</h1>
+     <div id="productos">
+
+     </div>
+    </div>
+    <div id="carrito" class="carro">
+      <h2>carrito</h2>
+      <ul id="elementos-carrito">
+
+      </ul>
+     <button id="btn-comprar">Confirma</button>
+     <p>total : <span id="total">0</span></p>
+    </div>
+        
+  </section>  
+  </main>
 <script src="./index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="./libs/js/bootstrap.min.js"></script>
