--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>PRESTAMOS ML</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <li class="nav-item">
+      <a class="nav-link" href="./formu.html">Formulario</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Inicio</a>
+    </li>
+  </header>
   <main>
     </div>
     <section class="card_contenedora">
@@ -58,3 +65,6 @@
 <script src="./libs/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
