--- a/formu.html
+++ b/formu.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.js">
     <title>Formulario</title>
+    
 </head>
+<header>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Formulario</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="./index.html">Inicio</a>
+  </li>
+</header>
 <body>
+  <h1>Completa este formulario y recibi mas informacion</h1>
    <main>
     <form>
-        <div id ="complet" class="mb-3">
-          <label>Email</label>
-          <input type="email" id="complet">
-        </div>
-        <div id="com" class="mb-3">
-          <label>Contraseña</label>
-          <input type="password" id="com">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="confirma">
-          <label>Confirmo todos los datos</label>
-        </div>
-        <button type="submit" class="btn btn-primary" id="clock">Enviar</button>
-      </form>
+      <div class="mb-3">
+        <label>Email</label>
+        <input type="email" id="complet">
+      </div>
+      <div class="mb-3">
+        <label>Contraseña</label>
+        <input type="password" id="com">
+      </div>
+      <div>
+        <input type="checkbox" class="form-check-input">
+        <label>Confirmo todos los datos</label>
+      </div>
+      <button id="btn">Enviar</button>
+    </form>
+
    </main> 
 </body>
+<script src="./index.js"></script>
 </html>
 
 
